div/wowmin/resources/wowmin-namespace.yaml
***REMOVED*** Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: wowmin
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    name: wowmin
