div/wowmin/resources/wowmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wowmin
  namespace: wowmin
spec:
  selector:
    app: wowmin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
